--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         <p>I'm Rita Bijker. <b>Webdeveloper.</b></p>
                         <p>Down to earth, love sports and addicted to my pc... :) </p>
                         <p>A developer who stands for <b>functionality & design</b> with a wink!<br /><br />
-                        If you want a website with the right look, feel and does what it has to do, <a
-                        href="contact.html">Contact me!</a></p>
+                        If you want a site with the right looks and feel <a
+                        href="contact.html">contact me.</a></p>
                 </div>
         </main>
         <aside>
